{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "27782ea2-7fab-4fb1-b7cc-05cf22ab2044",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "097755ba-a2fa-4596-89c5-a582a89369cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a97948da-61d7-4ded-8a74-9d8c3a90f952",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "9a447ecb-5ff2-4ead-ac19-f9e6729f4a8d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "c27fbaaf-c83a-4988-b522-e58a9a23f84e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3d5d5eb8-9e84-465a-b004-c3a7122af144",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "992dc941-c187-4270-82ae-6c30b83aeb72",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}