{
    "name": "InputAction",
    "maps": [
        {
            "name": "Keyboard",
            "id": "815fb5ee-6274-4e70-8c64-3eff6819da3a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0267c041-0fe2-4d99-a3cc-797569a8855c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bd3b96dc-9f9b-411b-b97e-7e3d0af38375",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Vector2",
                    "id": "54227257-5615-4b0c-9f29-0c57e7d57e97",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "016d1eb3-12e6-4a22-a768-7b8e2b43f159",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da8f9ce0-314e-4c19-a0a4-7b87a622030c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7bee6760-fddd-4018-83b4-22fa1cd1d035",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "babcd875-676e-4690-bdef-2f877d831c3d",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "a24c6d6d-5131-42ac-b55b-543329706a43",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5ccdcce0-27a1-4257-b777-5133cc65fb98",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyMouse",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyMouse",
            "bindingGroup": "KeyMouse",
            "devices": []
        }
    ]
}